samples/_failures_safe/1761440141_3eac2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13724a25.c: In function ‘main’:
./samples/SAFE/__tmp_13724a25.c:166:21: error: expected ‘;’ at end of input
  166 |         print_matrix
      |                     ^
      |                     ;
./samples/SAFE/__tmp_13724a25.c:166:9: error: expected declaration or statement at end of input
  166 |         print_matrix
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_13724a25.c:166:9: error: expected declaration or statement at end of input
